--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -514,3 +514,13 @@ footer {
     // animation: Eagles_ss 20s linear infinite;
     padding-bottom: 20px;
 }
+#japan {
+	background-attachment: fixed;
+	background-size: 110%;
+    background-color: #000;
+    // @media screen and (min-width: 479px) {
+    // 	animation: Giants 20s linear infinite;
+    // }
+    // animation: Giants_ss 20s linear infinite;
+    padding-bottom: 20px;
+}
